--- a/app/elements/password-element.html
+++ b/app/elements/password-element.html
@@ -20,19 +20,32 @@
       iron-form paper-dropdown-menu {
         display: block;
       }
+
+      .text-center {
+        text-align: center;
+      }
     </style>
 
     <paper-card heading="Password Reset">
       <div class="card-content">
-        <iron-form id="form" method="post" action="/password">
-          <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}" autoValidate></paper-input>
+        <template is="dom-if" if="[[user.hasPass]]">
+          <iron-form id="form" method="post" action="/password">
+            <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}" autoValidate></paper-input>
 
-          <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}" autoValidate></paper-input>
+            <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}" autoValidate></paper-input>
 
-          <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}" autoValidate></paper-input>
+            <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}" autoValidate></paper-input>
 
-          <paper-button disabled$="[[!_computeFormReady(user.currentPassword, user.newPassword, user.confirmNewPassword)]]" raised on-tap="_submitForm">Submit</paper-button>
-        </iron-form>
+            <paper-button disabled$="[[!_computeFormReady(user.currentPassword, user.newPassword, user.confirmNewPassword)]]" raised on-tap="_submitForm">Submit</paper-button>
+          </iron-form>
+        </template>
+
+        <template is="dom-if" if="[[!user.hasPass]]">
+          <div class="text-center">
+            <paper-button raised on-tap="_setPassword">Set Password</paper-button>
+            <p>* For security reasons, since you haven't specified a password before, an email will be sent to your email: "[[user.email]]" to guide you through the process</p>
+          </div>
+        </template>
       </div>
     </paper-card>
   </template>
@@ -50,13 +63,16 @@
             value: {
               currentPassword: null,
               newPassword: null,
-              confirmNewPassword: null
+              confirmNewPassword: null,
+              email: null,
+              hasPass: null
             },
             notify: true
           }
         },
         ready: function() {
-
+          this.set('user.email', EMAIL);
+          this.set('user.hasPass', HAS_PASS);
         },
         _computeFormReady: function(currentPassword, newPassword, confirmNewPassword) {
           return currentPassword && newPassword && confirmNewPassword;
@@ -66,6 +82,9 @@
           var form = document.getElementById('form');
           //   console.log(form.serialize(), form.validate());
           this._formReset();
+        },
+        _setPassword: function() {
+          alert('a redirection shall happen here!');
         },
         _formReset: function() {
           this.set('user.currentPassword', null);
