--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     var COMPANY_NAME = "mist.io";
     var NUMBER_OF_PEOPLE = "6-20";
     var NUMBER_OF_SERVERS = "1-5";
+    var EMAIL = "fakiolasmarios@gmail.com";
+    var HAS_PASS = true;
   </script>
 </head>
 
