billing / plan items

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -61,4 +61,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="register-element.html">
 <link rel="import" href="details-element.html">
 <link rel="import" href="password-element.html">
+<link rel="import" href="billing-element.html">
+<link rel="import" href="plan-element.html">
 <link rel="import" href="users.html">
