--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -78,6 +78,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'password';
     });
 
+    page('/billing', function() {
+      app.route = 'billing';
+    });
+
     // 404
     page('*', function() {
       app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
