--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,84 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     var NUMBER_OF_SERVERS = "1-5";
     var EMAIL = "fakiolasmarios@gmail.com";
     var HAS_PASS = true;
+    var CURRENT_PLAN = {
+      "machine_limit": 20,
+      "promo_code": {
+        "discount": 100,
+        "plans": ["Startup"],
+        "title": "MARIOS",
+        "duration": 900,
+        "send_to_purchase": false,
+        "description": "100% off for 30 months",
+        "stripe_coupon_id": "",
+        "expiration": "2019-12-31"
+      },
+      "title": "Startup",
+      "started": 1436552051.308805,
+      "isTrial": false,
+      "has_expired": false,
+      "expiration": 1514312051.308817
+    };
+    var PLANS = [{
+      "is_ibm_compatible": false,
+      "price": 0,
+      "title": "Lite",
+      "description": "No monitoring",
+      "machine_limit": 0
+    }, {
+      "is_ibm_compatible": true,
+      "price": 39,
+      "title": "Basic",
+      "description": "",
+      "machine_limit": 5
+    }, {
+      "is_ibm_compatible": true,
+      "price": 149,
+      "title": "Startup",
+      "description": "",
+      "machine_limit": 20
+    }, {
+      "is_ibm_compatible": false,
+      "price": null,
+      "title": "Enterprise",
+      "description": "Contact us",
+      "machine_limit": null
+    }];
+    var USER_PLANS = [{
+      "action": "started",
+      "time": 1432715133.746734,
+      "isTrial": true,
+      "promo_code": "",
+      "title": "Startup"
+    }, {
+      "action": "expired",
+      "time": 1436552051.308402,
+      "isTrial": true,
+      "promo_code": "",
+      "title": "Startup"
+    }, {
+      "action": "started",
+      "time": 1436552051.308805,
+      "isTrial": false,
+      "promo_code": "MARIOS",
+      "title": "Startup"
+    }, {
+      "action": "will expire",
+      "time": 1514312051.308817,
+      "isTrial": false,
+      "promo_code": "MARIOS",
+      "title": "Startup"
+    }]
+    var PROMO_CODES = [{
+      "discount": 100,
+      "plans": ["Basic"],
+      "title": "ONEYEARFREE",
+      "duration": 365,
+      "send_to_purchase": false,
+      "description": "100% off for 1 year",
+      "stripe_coupon_id": "",
+      "expiration": "2016-12-31"
+    }]
   </script>
 </head>
 
@@ -124,6 +202,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="lock"></iron-icon>
             <span>Password Reset</span>
           </a>
+
+          <a data-route="billing" href="/billing">
+            <iron-icon icon="account-balance-wallet"></iron-icon>
+            <span>Billing</span>
+          </a>
         </paper-menu>
       </paper-scroll-header-panel>
 
@@ -173,17 +256,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <p>Copyright (c) 2015 The Polymer Authors. All rights reserved.</p>
                 <p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
                 <ul>
-                <li>Redistributions of source code must retain the above copyright
-                notice, this list of conditions and the following disclaimer.</li>
-                <li>Redistributions in binary form must reproduce the above
-                copyright notice, this list of conditions and the following disclaimer
-                in the documentation and/or other materials provided with the
-                distribution.</li>
-                <li>Neither the name of Google Inc. nor the names of its
-                contributors may be used to endorse or promote products derived from
-                this software without specific prior written permission.</li>
+                  <li>Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.</li>
+                  <li>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
+                  </li>
+                  <li>Neither the name of Google Inc. nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.</li>
                 </ul>
-                <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+                <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+                  ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+                  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
+                  EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
               </paper-material>
             </section>
 
@@ -191,9 +272,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <paper-material elevation="1">
                 <h2 class="page-title">Users</h2>
                 <p>This is the users section</p>
-                <a href$="{{baseUrl}}users/Addy">Addy</a><br>
-                <a href$="{{baseUrl}}users/Rob">Rob</a><br>
-                <a href$="{{baseUrl}}users/Chuck">Chuck</a><br>
+                <a href$="{{baseUrl}}users/Addy">Addy</a>
+                <br>
+                <a href$="{{baseUrl}}users/Rob">Rob</a>
+                <br>
+                <a href$="{{baseUrl}}users/Chuck">Chuck</a>
+                <br>
                 <a href$="{{baseUrl}}users/Sam">Sam</a>
               </paper-material>
             </section>
@@ -221,6 +305,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <details-element data-route="details"></details-element>
 
             <password-element data-route="password"></password-element>
+
+            <billing-element data-route="billing"></billing-element>
           </iron-pages>
         </div>
       </paper-scroll-header-panel>
