--- a/app/elements/plan-element.html
+++ b/app/elements/plan-element.html
@@ -24,20 +24,22 @@
       }
 
       paper-button {
-          display: block;
-          margin: 0;
+        display: block;
+        margin: 0;
       }
 
       hr {
-          border: none;
-          border-bottom: 1px solid #ccc;
+        border: none;
+        border-bottom: 1px solid #ccc;
       }
     </style>
 
     <paper-card>
       <div class="card-content">
-        [[plan.title]]
+        <h4>[[plan.title]]</h4>
         <hr>
+        <p>[[priceText]]</p>
+        <p>[[plan.description]]</p>
         <paper-button raised on-tap="_selectPlan" plan="[[plan]]">Select</paper-button>
       </div>
     </paper-card>
@@ -53,14 +55,43 @@
         properties: {
           plan: {
             type: Object
-          }
+          },
+          priceText: {
+            type: String,
+            computed: '_computePriceText(plan.price)'
+          },
+          discountedPriceText: {
+            type: String,
+            computed: '_computeDiscountedPriceText(plan.promo)'
+          },
+          expirationDate: {
+            type: String,
+            computed: '_computeExpirationDate(plan.expiration)'
+          },
         },
         ready: function() {
 
         },
+        _computePriceText: function(price) {
+          return price != null ? '$' + price + '/month' : '';
+        },
+        _computeDiscountedPriceText: function(plan.promo) {
+          if (this.plan.promo) {
+            var newPrice = Math.round(this.plan.price * (1 - (this.plan.promo.discount / 100)));
+            return '$' + newPrice + '/month';
+          }
+          return '';
+        },
+        _computeExpirationDate: function(expiration) {
+          if (this.plan.expiration) {
+            var d = new Date(this.plan.expiration * 1000);
+            return d.getMonthName() + " " + d.getDate() + ", " + d.getFullYear();
+          }
+          return '';
+        },
         _selectPlan: function(e) {
-            var plan = e.currentTarget.plan;
-            console.log(plan);
+          var plan = e.currentTarget.plan;
+          console.log(plan);
         }
       });
     })();
