--- a/app/index.html
+++ b/app/index.html
@@ -207,6 +207,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="account-balance-wallet"></iron-icon>
             <span>Billing</span>
           </a>
+
+          <a data-route="feedback" href="/feedback">
+            <iron-icon icon="communication:comment"></iron-icon>
+            <span>Feedback</span>
+          </a>
         </paper-menu>
       </paper-scroll-header-panel>
 
@@ -307,6 +312,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <password-element data-route="password"></password-element>
 
             <billing-element data-route="billing"></billing-element>
+
+            <feedback-element data-route="feedback"></feedback-element>
           </iron-pages>
         </div>
       </paper-scroll-header-panel>
