--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/device-icons.html">
-<!-- <link rel="import" href="../bower_components/iron-icons/content-icons.html"> -->
+<link rel="import" href="../bower_components/iron-icons/communication-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
@@ -63,4 +63,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="password-element.html">
 <link rel="import" href="billing-element.html">
 <link rel="import" href="plan-element.html">
+<link rel="import" href="feedback-element.html">
 <link rel="import" href="users.html">
